# VI-RT

./: .gitignore  CMakeLists.txt  coffee_table_round_01_1k.mtl  espressokettle.mtl  lego.mtl  main.cpp  output-onlinepngtools.exr  red.exr  rubber_duck_toy_1k.mtl  tea_set_01_1k1.mtl  tempo-three-wheeler2.mtl
Camera/: camera.hpp  perspective.cpp  perspective.hpp
Image/: ImagePPM.cpp  ImagePPM.hpp  image.hpp
Light/: AmbientLight.hpp  AreaLight.hpp  InfiniteAreaLight.hpp  PointLight.hpp  light.hpp
Primitive/: AABB.hpp  BB.hpp  primitive.hpp
Primitive/BRDF/: BRDF.hpp  Phong.cpp  Phong.hpp
Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp  triangle.hpp
Rays/: intersection.hpp  ray.hpp
Renderer/: StandardRenderer.cpp  StandardRenderer.hpp  renderer.hpp
Scene/: scene.cpp  scene.hpp
Scene/tinyobjloader/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  tinyobjloader-config-version.cmake  tinyobjloader-targets.cmake  tinyobjloader.pc  tinyobjloader.sln  tinyobjloader.vcxproj  tinyobjloader.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
Scene/tinyobjloader/models/: cornell_box_VI.mtl
Shader/: AmbientShader.cpp  AmbientShader.hpp  DistributedShader.cpp  DistributedShader.hpp  PathTracerShader.cpp  PathTracerShader.hpp  WhittedShader.cpp  WhittedShader.hpp  shader.hpp
utils/: AABB.cpp  BB.cpp  Color.hpp  EnvMap.hpp  RGB.hpp  vector.hpp
